--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wedding-invitation",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://[your-username].github.io/[your-repo-name]",
+  "homepage": "https://AlexRainberg.github.io/Alexander_Jekaterina",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
